--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "JwtKey": "f5b2f809728a4773b6681d9515840d53",
+  "ApiKeyName": "api_key",
+  "ApiKey": "curso_api_IlTevUZ/z=ey3NwwCV/ynWg$=",
+  "Smtp": {
+    "Host": "smtp.sengrid.net",
+    "Port": "587",
+    "UserName": "apikey",
+    "Password": "suasenha"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
