Terminado as Configurações na Program, foi criado métodos void de configuração

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -6,7 +6,7 @@
     "Host": "smtp.sengrid.net",
     "Port": "587",
     "UserName": "apikey",
-    "Password": "suasenha"
+    "Password": "@Sql2019"
   },
 
   "Logging": {
