O problema com SendGrid ainda continua, Foi adicionado no DataBase um banco ficticio, Testando Performance agora

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,12 +1,12 @@
 {
   "JwtKey": "f5b2f809728a4773b6681d9515840d53",
   "ApiKeyName": "api_key",
-  "ApiKey": "curso_api_IlTevUZ/z=ey3NwwCV/ynWg$=",
+  "ApiKey": "curso_api_IlTevUZ/z=ey3NwwCV/ynWg$==",
   "Smtp": {
-    "Host": "smtp.sengrid.net",
-    "Port": "587",
+    "Host": "smtp.sendgrid.net",
+    "Port": "587", //465 
     "UserName": "apikey",
-    "Password": "@Sql2019"
+    "Password": "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" 
   },
 
   "Logging": {
