Terminado mais o SendGrid nao envia o Email ainda

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,12 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-563RGJKO\\sqlexpress;Initial Catalog=blog-modulo-6;Integrated Security=True"
+  },
   "JwtKey": "f5b2f809728a4773b6681d9515840d53",
   "ApiKeyName": "api_key",
   "ApiKey": "curso_api_IlTevUZ/z=ey3NwwCV/ynWg$==",
   "Smtp": {
     "Host": "smtp.sendgrid.net",
-    "Port": "587", //465 
+    "Port": "587", 
     "UserName": "apikey",
-    "Password": "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" 
+    "Password": "suasenha"
   },
 
   "Logging": {
